# thriftynet

./: README.md  pyproject.toml
thriftynet/: ThriftyEncoder.py  ThriftyNetwork.py  __init__.py
